Sign up form with validations

--- a/src/main/resources/templates/fragments/user/signUp.html
+++ b/src/main/resources/templates/fragments/user/signUp.html
@@ -1,12 +1,16 @@
 <div>
   <h1>Sign up</h1>
-  <form action="signUp" method="post">
+  <form action="signUp" method="post" th:object="${userForm}">
     <label th:for="username"><th:block th:text="#{user.username}"></th:block></label>
-    <input type="text" id="username" name="username">
+    <input type="text" th:field="*{username}">
+    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}" th:errorclass="error"/>
     <label th:for="password"><th:block th:text="#{user.password}"></th:block></label>
-    <input type="password" name="password" id="password">
-    <label th:for="confirmPwd"><th:block th:text="#{user.password}"></th:block></label>
-    <input type="password" name="confirmPwd" id="confirmPwd">
+    <input type="password" th:field="*{password}">
+    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" th:errorclass="error"/>
+    <label th:for="confirmPwd"><th:block th:text="#{user.confirmPwd}"></th:block></label>
+    <p th:if="${#fields.hasErrors('confirmPwd')}" th:errors="*{confirmPwd}" th:errorclass="error"/>
+    <p th:if="${#fields.hasErrors('errorMatchPwds')}" th:errors="*{errorMatchPwds}" th:errorclass="error"/>
+    <input type="password" th:field="*{confirmPwd}">
     <input type="button" th:value="#{form.showPwd}">
     <input type="button" th:value="#{form.reset}">
     <input type="submit" th:value="#{form.submit}">
