Checking signed user behaviour changed

--- a/src/main/resources/templates/fragments/layout/nav.html
+++ b/src/main/resources/templates/fragments/layout/nav.html
@@ -1,7 +1,7 @@
 <nav>
-  <ul id="menu-navegacion-horizontal">
-    <li><a>Navegacion</a></li>
-    <li><a>Navegacion</a></li>
-    <li><a>Navegacion</a></li>
-  </ul>
+  <div id="menu-navegacion-horizontal">
+    <div><a>Navegacion</a></div>
+    <div><a>Navegacion</a></div>
+    <div><a>Navegacion</a></div>
+  </div>
 </nav>
