--- a/src/main/resources/templates/fragments/user/signUp.html
+++ b/src/main/resources/templates/fragments/user/signUp.html
@@ -8,12 +8,14 @@
     <input type="password" th:field="*{password}">
     <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" th:errorclass="error"/>
     <label th:for="confirmPwd"><th:block th:text="#{user.confirmPwd}"></th:block></label>
+    <input type="password" th:field="*{confirmPwd}">
     <p th:if="${#fields.hasErrors('confirmPwd')}" th:errors="*{confirmPwd}" th:errorclass="error"/>
     <p th:if="${#fields.hasErrors('errorMatchPwds')}" th:errors="*{errorMatchPwds}" th:errorclass="error"/>
-    <p th:if="*{globalErrors}" th:text="*{globalErrors}" th:class="error"></p>
-    <input type="password" th:field="*{confirmPwd}">
-    <input type="button" th:value="#{form.showPwd}">
-    <input type="button" th:value="#{form.reset}">
+    <th:block th:if="${#fields.hasGlobalErrors()}">
+      <p th:each="err : ${#fields.errors('global')}" th:text="${err}" class="error" />
+    </th:block>
+    <input type="button" th:value="#{form.showPwd}" onclick="showPasswords()">
+    <input type="reset" th:value="#{form.reset}">
     <input type="submit" th:value="#{form.submit}">
   </form>
 </div>
