--- a/src/main/resources/templates/fragments/layout/head.html
+++ b/src/main/resources/templates/fragments/layout/head.html
@@ -3,4 +3,5 @@
     <meta charset="utf-8" />
     <link rel="icon" href="data:," />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <script type="text/javascript" th:src="@{../js/functions.js}"></script>
 </head>
