Basic behavior cookies session

--- a/src/main/resources/templates/fragments/user/logIn.html
+++ b/src/main/resources/templates/fragments/user/logIn.html
@@ -29,6 +29,7 @@
         <div><input type="checkbox" onclick="showPwd()"><label>Show password</label></div>
         <p th:if="${errorPwd}" th:text="${errorPwd}" class="error"></p>
         <div><input type="button" value="Forgot password?" onclick="forgotPwd()">
-            <input type="submit" value="Log in"></div>
+            <input type="submit" value="Log in">
+        </div>
     </form>
 </div>
