--- a/src/main/resources/templates/fragments/layout/head.html
+++ b/src/main/resources/templates/fragments/layout/head.html
@@ -3,5 +3,6 @@
     <meta charset="utf-8" />
     <link rel="icon" href="data:," />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
-    <script type="text/javascript" th:src="@{../js/functions.js}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
