--- a/src/main/resources/templates/fragments/client/detail.html
+++ b/src/main/resources/templates/fragments/client/detail.html
@@ -1,4 +1,4 @@
-<div class="box detail-container">
+<div>
     <h2><th:block th:text="#{client.detail.title}"/></h2>
     <div class="divTable table-details">
         <div class="divTableHeading">
