--- a/src/main/resources/templates/fragments/layout/section.html
+++ b/src/main/resources/templates/fragments/layout/section.html
@@ -1,3 +1,3 @@
 <section id="seccion">
-    <div th:replace="~{|fragments/${content}|::|${fragment}|}"></div>
+    <div th:replace="~{|fragments/${content}|::${fragment}}"></div>
 </section>
