Added product detail

--- a/src/main/resources/templates/fragments/product/detail.html
+++ b/src/main/resources/templates/fragments/product/detail.html
@@ -11,7 +11,36 @@
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.id}"/></div><div class="divTableCell"><th:block th:text="*{id}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.code}"/></div><div class="divTableCell"><th:block th:text="*{code}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.description}"/></div><div class="divTableCell"><th:block th:text="*{description}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.brand}"/></div><div class="divTableCell"><th:block th:text="*{brand}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.model}"/></div><div class="divTableCell"><th:block th:text="*{model}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.price}"/></div><div class="divTableCell"><th:block th:text="*{price}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.discount}"/></div><div class="divTableCell"><th:block th:text="*{discount}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.newProduct}"/></div><div class="divTableCell"><th:block th:text="*{newProduct}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.categories}"/></div><div class="divTableCell"><th:block th:text="*{categories}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.stock}"/></div><div class="divTableCell"><th:block th:text="*{stock}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minHiddenStock}"/></div><div class="divTableCell"><th:block th:text="*{minHiddenStock}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minSupplierRequest}"/></div><div class="divTableCell"><th:block th:text="*{minSupplierRequest}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.comments}"/></div><div class="divTableCell"><th:block th:text="*{comments}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.evaluation}"/></div><div class="divTableCell"><th:block th:text="*{evaluation}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.totalSalesAmount}"/></div><div class="divTableCell"><th:block th:text="*{totalSalesAmount}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.totalSalesRevenue}"/></div><div class="divTableCell"><th:block th:text="*{totalSalesRevenue}"/></div></div>
             <th:block th:replace="~{fragments/auditory/detail::detailRow(auditory=*{auditory})}"/>
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
