Details and list without dtos

--- a/src/main/resources/templates/fragments/auditory/detail.html
+++ b/src/main/resources/templates/fragments/auditory/detail.html
@@ -6,3 +6,12 @@
     <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.removedDate}"/></div><div class="divTableCell"><th:block th:text="${auditory?.removedDate}"/></div></div>
     <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.removedUser}"/></div><div class="divTableCell"><th:block th:text="${auditory?.removedUser?.getId()}"/></div></div>
 </th:block>
+
+<th:block th:fragment="detailList(auditory)">
+    <div class="divTableCell"><th:block th:text="${auditory?.entryDate}"/></div>
+    <div class="divTableCell"><th:block th:text="${auditory?.entryUser}"/></div>
+    <div class="divTableCell"><th:block th:text="${auditory?.lastModificationDate}"/></div>
+    <div class="divTableCell"><th:block th:text="${auditory?.lastModificationUser}"/></div>
+    <div class="divTableCell"><th:block th:text="${auditory?.removedDate}"/></div>
+    <div class="divTableCell"><th:block th:text="${auditory?.removedUser}"/></div>
+</th:block>
