--- a/src/main/resources/templates/fragments/category/detail.html
+++ b/src/main/resources/templates/fragments/category/detail.html
@@ -7,18 +7,17 @@
         <div class="divTableHead"><th:block th:text="#{table.value}"/></div>
       </div>
     </div>
-    <div class="divTableBody" th:object="${categoryDetailsDTO}">
+    <div class="divTableBody" th:object="${category}">
       <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.id}"/></div><div class="divTableCell"><th:block th:text="*{id}"/></div></div>
       <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.code}"/></div><div class="divTableCell"><th:block th:text="*{code}"/></div></div>
       <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.description}"/></div><div class="divTableCell"><th:block th:text="*{description}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.parentCategory}"/></div><div class="divTableCell"><th:block th:text="*{parentCategory}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.childCategories}"/></div><div class="divTableCell"><th:block th:text="*{childCategories}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.entryDate}"/></div><div class="divTableCell"><th:block th:text="*{entryDate}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.entryUser}"/></div><div class="divTableCell"><th:block th:text="*{entryUser}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.lastModificationDate}"/></div><div class="divTableCell"><th:block th:text="*{lastModificationDate}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.lastModificationUser}"/></div><div class="divTableCell"><th:block th:text="*{lastModificationUser}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.removedDate}"/></div><div class="divTableCell"><th:block th:text="*{removedDate}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{auditory.detail.removedUser}"/></div><div class="divTableCell"><th:block th:text="*{removedUser}"/></div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.parentCategory}"/></div><div class="divTableCell"><th:block th:text="*{parentCategory?.code}"/></div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{category.detail.childCategories}"/></div><div class="divTableCell">
+        <th:block th:each="child : *{childCategories}">
+           <p><th:block th:text="${child.code}"/></p>
+        </th:block>
+      </div></div>
+      <th:block th:replace="~{fragments/auditory/detail::detailRow(auditory=*{auditory})}"/>
     </div>
   </div>
 </div>
